Fix stack.yml to add sg

--- a/stack.yml
+++ b/stack.yml
@@ -2,24 +2,71 @@ AWSTemplateFormatVersion: 2010-09-09
 
 Description: Manage AWS Infrastructure by this code.
 
+Mappings:
+  RegionMap:
+    ap-northeast-2:
+      VPC: 10.10.0.0/16
+      DHCPDomainName: ap-northeast-2.compute.internal
+      PublicSubnetA: 10.10.1.0/24
+      PublicSubnetB: 10.10.2.0/24
+      PrivateSubnetA: 10.10.11.0/24
+      PrivateSubnetB: 10.10.12.0/24
+    eu-west-1:
+      VPC: 10.20.0.0/16
+      DHCPDomainName: eu-west-1.compute.internal
+      PublicSubnetA: 10.20.1.0/24
+      PublicSubnetB: 10.20.2.0/24
+      PrivateSubnetA: 10.20.11.0/24
+      PrivateSubnetB: 10.20.12.0/24
+    us-east-1:
+      VPC: 10.30.0.0/16
+      DHCPDomainName: ec2.internal
+      PublicSubnetA: 10.30.1.0/24
+      PublicSubnetB: 10.30.2.0/24
+      PrivateSubnetA: 10.30.11.0/24
+      PrivateSubnetB: 10.30.12.0/24
+
+Conditions:
+  isSeoul:
+    !Equals [ !Ref "AWS::Region", ap-northeast-2 ]
+
 Resources:
   VPC:
     Type: AWS::EC2::VPC
     Properties:
-      CidrBlock: 10.0.0.0/16
+      CidrBlock:
+        !FindInMap [RegionMap, !Ref "AWS::Region", VPC]
       EnableDnsHostnames: true
       EnableDnsSupport: true
       InstanceTenancy: "default"
       Tags:
         - Key: "Name"
           Value: "MR-VPC"
+  DHCPOptions:
+    Type: AWS::EC2::DHCPOptions
+    Properties:
+      DomainName:
+        !FindInMap [RegionMap, !Ref "AWS::Region", DHCPDomainName]
+      DomainNameServers:
+        - AmazonProvidedDNS
+      Tags:
+        - Key: "Name"
+          Value: "MR-DHCP"
+  VPCDHCPOptionsAssociation:
+    Type: AWS::EC2::VPCDHCPOptionsAssociation
+    Properties:
+      VpcId:
+        !Ref VPC
+      DhcpOptionsId:
+        !Ref DHCPOptions
   PublicSubnetA:
     Type: AWS::EC2::Subnet
     Properties:
       AvailabilityZone: !Select
         - '0'
         - !GetAZs ''
-      CidrBlock: "10.0.1.0/24"
+      CidrBlock:
+        !FindInMap [RegionMap, !Ref "AWS::Region", PublicSubnetA]
       MapPublicIpOnLaunch: true
       VpcId:
         !Ref VPC
@@ -32,7 +79,8 @@ Resources:
       AvailabilityZone: !Select
         - '1'
         - !GetAZs ''
-      CidrBlock: "10.0.2.0/24"
+      CidrBlock:
+        !FindInMap [RegionMap, !Ref "AWS::Region", PublicSubnetB]
       MapPublicIpOnLaunch: true
       VpcId:
         !Ref VPC
@@ -45,7 +93,8 @@ Resources:
       AvailabilityZone: !Select
         - '0'
         - !GetAZs ''
-      CidrBlock: "10.0.11.0/24"
+      CidrBlock:
+        !FindInMap [RegionMap, !Ref "AWS::Region", PrivateSubnetA]
       MapPublicIpOnLaunch: false
       VpcId:
         !Ref VPC
@@ -58,7 +107,8 @@ Resources:
       AvailabilityZone: !Select
         - '1'
         - !GetAZs ''
-      CidrBlock: "10.0.12.0/24"
+      CidrBlock:
+        !FindInMap [RegionMap, !Ref "AWS::Region", PrivateSubnetB]
       MapPublicIpOnLaunch: false
       VpcId:
         !Ref VPC
@@ -155,7 +205,7 @@ Resources:
       RuleNumber: 100
       Protocol: 6
       RuleAction: allow
-      CidrBlock: 10.0.0.0/16
+      CidrBlock: 10.0.0.0/8
       PortRange:
         From: 22
         To: 22
@@ -194,7 +244,7 @@ Resources:
       RuleNumber: 400
       Protocol: 6
       RuleAction: allow
-      CidrBlock: 10.0.0.0/16
+      CidrBlock: 10.0.0.0/8
       PortRange:
         From: 5234
         To: 5234
@@ -310,3 +360,86 @@ Resources:
         !Ref NatGatewayB
       RouteTableId:
         !Ref PrivateRouteTableB
+  BastionSecurityGroup:
+    Type: AWS::EC2::SecurityGroup
+    Properties:
+      GroupDescription: Security Group for Bastion EC2 Server.
+      GroupName: MR-Bastion-SG
+      SecurityGroupIngress:
+        - IpProtocol: tcp
+          FromPort: 20222
+          ToPort: 20222
+          CidrIp: 0.0.0.0/0
+      SecurityGroupEgress:
+        - IpProtocol: "-1"
+          CidrIp: 0.0.0.0/0
+      VpcId:
+        !Ref VPC
+      Tags:
+        - Key: "Name"
+          Value: "MR-Bastion-SG"
+  ELBSecurityGroup:
+    Type: AWS::EC2::SecurityGroup
+    Properties:
+      GroupDescription: Security Group for Elastic Load Balancer.
+      GroupName: MR-ELB-SG
+      SecurityGroupIngress:
+        - IpProtocol: tcp
+          FromPort: 80
+          ToPort: 80
+          CidrIp: 0.0.0.0/0
+        - IpProtocol: tcp
+          FromPort: 443
+          ToPort: 443
+          CidrIp: 0.0.0.0/0
+      SecurityGroupEgress:
+        - IpProtocol: "-1"
+          CidrIp: 0.0.0.0/0
+      VpcId:
+        !Ref VPC
+      Tags:
+        - Key: "Name"
+          Value: "MR-ELB-SG"
+  EC2SecurityGroup:
+    Type: AWS::EC2::SecurityGroup
+    Properties:
+      GroupDescription: Security Group for WAS EC2 Server.
+      GroupName: MR-EC2-SG
+      SecurityGroupIngress:
+        - IpProtocol: tcp
+          FromPort: 22
+          ToPort: 22
+          SourceSecurityGroupId:
+            !Ref BastionSecurityGroup
+        - IpProtocol: tcp
+          FromPort: 80
+          ToPort: 80
+          SourceSecurityGroupId:
+            !Ref ELBSecurityGroup
+      SecurityGroupEgress:
+        - IpProtocol: "-1"
+          CidrIp: 0.0.0.0/0
+      VpcId:
+        !Ref VPC
+      Tags:
+        - Key: "Name"
+          Value: "MR-EC2-SG"
+  RDSSecurityGroup:
+    Type: AWS::EC2::SecurityGroup
+    Condition: isSeoul
+    Properties:
+      GroupDescription: Security Group for RDS Server.
+      GroupName: MR-RDS-SG
+      SecurityGroupIngress:
+        - IpProtocol: tcp
+          FromPort: 5234
+          ToPort: 5234
+          CidrIp: 10.0.0.0/8
+      SecurityGroupEgress:
+        - IpProtocol: "-1"
+          CidrIp: 0.0.0.0/0
+      VpcId:
+        !Ref VPC
+      Tags:
+        - Key: "Name"
+          Value: "MR-RDS-SG"
