--- a/stack.yml
+++ b/stack.yml
@@ -11,6 +11,8 @@ Mappings:
       PublicSubnetB: 10.10.2.0/24
       PrivateSubnetA: 10.10.11.0/24
       PrivateSubnetB: 10.10.12.0/24
+      DatabaseSubnetA: 10.10.21.0/24
+      DatabaseSubnetB: 10.10.22.0/24
     eu-west-1:
       VPC: 10.20.0.0/16
       DHCPDomainName: eu-west-1.compute.internal
@@ -18,6 +20,8 @@ Mappings:
       PublicSubnetB: 10.20.2.0/24
       PrivateSubnetA: 10.20.11.0/24
       PrivateSubnetB: 10.20.12.0/24
+      DatabaseSubnetA: 10.20.21.0/24
+      DatabaseSubnetB: 10.20.22.0/24
     us-east-1:
       VPC: 10.30.0.0/16
       DHCPDomainName: ec2.internal
@@ -25,6 +29,8 @@ Mappings:
       PublicSubnetB: 10.30.2.0/24
       PrivateSubnetA: 10.30.11.0/24
       PrivateSubnetB: 10.30.12.0/24
+      DatabaseSubnetA: 10.30.21.0/24
+      DatabaseSubnetB: 10.30.22.0/24
 
 Conditions:
   isSeoul:
@@ -115,6 +121,34 @@ Resources:
       Tags:
         - Key: "Name"
           Value: "MR-Private-Subnet-B"
+  DatabaseSubnetA:
+    Type: AWS::EC2::Subnet
+    Properties:
+      AvailabilityZone: !Select
+        - '0'
+        - !GetAZs ''
+      CidrBlock:
+        !FindInMap [RegionMap, !Ref "AWS::Region", DatabaseSubnetA]
+      MapPublicIpOnLaunch: false
+      VpcId:
+        !Ref VPC
+      Tags:
+        - Key: "Name"
+          Value: "MR-Database-Subnet-A"
+  DatabaseSubnetB:
+    Type: AWS::EC2::Subnet
+    Properties:
+      AvailabilityZone: !Select
+        - '1'
+        - !GetAZs ''
+      CidrBlock:
+        !FindInMap [RegionMap, !Ref "AWS::Region", DatabaseSubnetB]
+      MapPublicIpOnLaunch: false
+      VpcId:
+        !Ref VPC
+      Tags:
+        - Key: "Name"
+          Value: "MR-Database-Subnet-B"
   IGW:
     Type: AWS::EC2::InternetGateway
     Properties:
@@ -152,6 +186,14 @@ Resources:
       Tags:
         - Key: "Name"
           Value: "MR-Private-Route-B"
+  DatabaseRouteTable:
+    Type: AWS::EC2::RouteTable
+    Properties:
+      VpcId:
+        !Ref VPC
+      Tags:
+        - Key: "Name"
+          Value: "MR-Database-Route"
   PublicSubnetAPublicRouteTableAssociation:
     Type: AWS::EC2::SubnetRouteTableAssociation
     Properties:
@@ -180,6 +222,20 @@ Resources:
         !Ref PrivateRouteTableB
       SubnetId:
         !Ref PrivateSubnetB
+  DatabaseSubnetADatabaseRouteTableAssociation:
+    Type: AWS::EC2::SubnetRouteTableAssociation
+    Properties:
+      RouteTableId:
+        !Ref DatabaseRouteTable
+      SubnetId:
+        !Ref DatabaseSubnetA
+  DatabaseSubnetBDatabaseRouteTableAssociation:
+    Type: AWS::EC2::SubnetRouteTableAssociation
+    Properties:
+      RouteTableId:
+        !Ref DatabaseRouteTable
+      SubnetId:
+        !Ref DatabaseSubnetB
   PublicRouteTableRouteIGW:
     Type: AWS::EC2::Route
     Properties:
@@ -310,6 +366,20 @@ Resources:
     Properties:
       SubnetId:
         !Ref PrivateSubnetB
+      NetworkAclId:
+        !Ref NetworkAcl
+  DatabaseSubnetANetworkAclAssociation:
+    Type: AWS::EC2::SubnetNetworkAclAssociation
+    Properties:
+      SubnetId:
+        !Ref DatabaseSubnetA
+      NetworkAclId:
+        !Ref NetworkAcl
+  DatabaseSubnetBNetworkAclAssociation:
+    Type: AWS::EC2::SubnetNetworkAclAssociation
+    Properties:
+      SubnetId:
+        !Ref DatabaseSubnetB
       NetworkAclId:
         !Ref NetworkAcl
   NatGatewayEipA:
